deploy/htdocs/version/src/inc/style/component/block/_block-image-carousel.scss
.component-block-image-carousel {

	.slider-viewport {
		width: 100%;
		overflow: hidden;
		padding: 0 $sizeGrid * 3 0 $sizeGrid * 4;
		margin-bottom: $sizeGrid;
	}

	.slides {
		@extend %reset-list;
		@include aspect-ratio(1160px, 600px);
		white-space: nowrap;
		font-size: 0;
	}

	.slide {
		figure {
			position: relative;

			&:after {
				@include pos(auto, 0, 0, auto);
				@include triangle(right, bottom, $colorWhite, $sizeGrid);
				position: absolute;
				content: '';
			}

			&:before {
				@include pos(auto, 0, 0, 0);
				@include size(100%, 25%);
				background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .25) 100%);
				content: '';
				position: absolute;
			}
		}

		img {
			@include size(100%);
		}

		figcaption {
			@include pos(auto, auto, $sizeGrid * 2, $sizeGrid * 2);
			position: absolute;
			color: $colorWhite;
		}
	}

	.pagination {
		@include size(100%, $sizeGrid * 2);
		padding: 0 $sizeGrid * 3 0 $sizeGrid * 4;
		position: relative;

		.track {
			@include size(auto, 1px);
			@include pos(50%, $sizeGrid * 4, auto, $sizeGrid * 5);
			transform: translateY(-50%);
			position: absolute;
			background: $colorBorder;
		}

		.progress {
			@include size(0, 4px);
			@include pos(50%, auto, auto, 0);
			position: absolute;
			transform: translateY(-50%);
			background: $colorPrimary;
			transition: width .2s ease(easeInOut);
			//padding-left: $sizeGrid * 1;
		}

		ul {
			@extend %reset-list;
			@include size(100%);
			display: flex;
			justify-content: space-between;
			align-items: center;
			padding: 0 $sizeGrid;
			position: relative;
		}

		li {
			@include size($sizeGrid * 2);
			display: inline-block;
			border: 1px solid $colorBorder;
			text-align: center;
			border-radius: 100%;
			color: $colorBorder;
			background: $colorWhite;
			font: 700 1.4rem / #{$sizeGrid * 2} $fontOpenSans;
			position: relative;
			transition: color .2s ease(easeInOut);

			&.is-active {
				color: $colorPrimary;
			}
		}
	}
}

